--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "4.20230115.0",
-    "@tsconfig/node16-strictest-esm": "1.0.3",
+    "@tsconfig/strictest": "1.0.2",
     "eslint": "8.33.0",
     "eslint-config-promise": "github:promise/eslint-config",
     "typescript": "4.9.5",
