--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -1,4 +1,4 @@
-name: Build and publish
+name: Wrangler
 
 on:
   push:
@@ -12,8 +12,10 @@ on:
 
 jobs:
   build:
-    name: Build
+    name: Test Build
     runs-on: ubuntu-latest
+
+    if: ${{ github.ref != 'refs/heads/main' }}
 
     steps:
     - name: Checkout repository
@@ -21,30 +23,34 @@ jobs:
 
     - name: Set up node
       uses: actions/setup-node@64ed1c7eab4cce3362f8c340dee64e5eaeef8f7c # v3
-      with:
-        node-version: "16.x"
 
-    - name: Restore cached modules
+    - name: Set up pnpm
+      uses: pnpm/action-setup@v2
+      id: pnpm-install
+      with:
+        version: 7
+        run_install: false
+
+    - name: Get pnpm store directory
+      id: pnpm-cache
+      shell: bash
+      run: |
+          echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
+
+    - name: Set up module cache
       uses: actions/cache@627f0f41f6904a5b1efbaed9f96d9eb58e92e920 # v3
       id: cache-packages
       with:
-        path: node_modules
-        key: ${{ hashFiles('**/package-lock.json') }}
+        path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
+        key: pnpm-store-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          pnpm-store-
 
-    - name: Fallback if module cache fails
-      run: npm ci
-      if: steps.cache-packages.outputs.cache-hit != 'true'
+    - name: Install dependencies
+      run: pnpm install
 
-    - name: Restore cached build
-      uses: actions/cache@627f0f41f6904a5b1efbaed9f96d9eb58e92e920 # v3
-      id: cache-build
-      with:
-        path: build
-        key: ${{ github.sha }}
-
-    - name: Fallback if build cache fails
+    - name: Build project
       run: npm run build
-      if: steps.cache-build.outputs.cache-hit != 'true'
 
   publish:
     name: Publish
@@ -58,19 +64,31 @@ jobs:
 
     - name: Set up node
       uses: actions/setup-node@64ed1c7eab4cce3362f8c340dee64e5eaeef8f7c # v3
-      with:
-        node-version: "16.x"
 
-    - name: Restore cached modules
+    - name: Set up pnpm
+      uses: pnpm/action-setup@v2
+      id: pnpm-install
+      with:
+        version: 7
+        run_install: false
+
+    - name: Get pnpm store directory
+      id: pnpm-cache
+      shell: bash
+      run: |
+          echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
+
+    - name: Set up module cache
       uses: actions/cache@627f0f41f6904a5b1efbaed9f96d9eb58e92e920 # v3
       id: cache-packages
       with:
-        path: node_modules
-        key: ${{ hashFiles('package-lock.json') }}
+        path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
+        key: pnpm-store-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          pnpm-store-
 
-    - name: Fallback if module cache fails
-      run: npm ci
-      if: steps.cache-packages.outputs.cache-hit != 'true'
+    - name: Install dependencies
+      run: pnpm install
 
     - name: Build and Publish to Worker
       uses: cloudflare/wrangler-action@4c10c1822abba527d820b29e6333e7f5dac2cabd # tag=2.0.0
