fix(gh-actions): disable cache when publishing
Signed-off-by: Promise <me@promise.solutions>

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -72,20 +72,20 @@ jobs:
         version: 7
         run_install: false
 
-    - name: Get pnpm store directory
-      id: pnpm-cache
-      shell: bash
-      run: |
-          echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
-
-    - name: Set up module cache
-      uses: actions/cache@627f0f41f6904a5b1efbaed9f96d9eb58e92e920 # v3
-      id: cache-packages
-      with:
-        path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
-        key: pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-        restore-keys: |
-          pnpm-store-
+#   - name: Get pnpm store directory
+#     id: pnpm-cache
+#     shell: bash
+#     run: |
+#         echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
+#
+#   - name: Set up module cache
+#     uses: actions/cache@627f0f41f6904a5b1efbaed9f96d9eb58e92e920 # v3
+#     id: cache-packages
+#     with:
+#       path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
+#       key: pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+#       restore-keys: |
+#         pnpm-store-
 
     - name: Install dependencies
       run: pnpm install
