--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Install dependencies
       run: pnpm install --frozen-lockfile
 
-    - name: Test worker build
+    - name: ${{ github.ref == 'refs/heads/main' && 'Build ans publish' || 'Test worker build' }}
       uses: cloudflare/wrangler-action@5e8484995321734668f14981c316aa9188d76ed1 # v3.3.2
       with:
         apiToken: ${{ secrets.CF_API_TOKEN }}
