--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@ compatibility_date = "2022-11-30"
 command = "npm run build"
 
 [triggers]
-crons = ["*/2 * * * *"] # every 2 minutes
+crons = ["* * * * *"] # every minute
 
 [vars]
 # Sensitive data should be stored in the worker itself as an encrypted value... in other terms: NOT IN THIS FILE!
