--- a/package.json
+++ b/package.json
@@ -15,7 +15,5 @@
     "typescript": "5.7.2",
     "wrangler": "3.93.0"
   },
-  "eslintConfig": {
-    "extends": "promise"
-  }
+  "packageManager": "pnpm@9.15.0"
 }
