feat: deployments? i think
Signed-off-by: Promise <me@promise.solutions>

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -14,6 +14,7 @@ jobs:
   build:
     name: ${{ github.ref == 'refs/heads/main' && 'Publish' || 'Test build' }}
     runs-on: self-hosted
+    environment: ${{ github.ref == 'refs/heads/main' && 'production' || '' }}
 
     if: ${{ github.event_name == 'pull_request' }}
 
