fix: use `wrangler deploy`
Signed-off-by: Promise <me@promise.solutions>

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "build": "tsc",
     "build:watch": "tsc -w",
-    "deploy": "wrangler publish",
+    "deploy": "wrangler deploy",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
