feat: enable worker logs
Signed-off-by: Promise <me@promise.solutions>

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -9,6 +9,9 @@ command = "npm run build"
 [triggers]
 crons = ["* * * * *"] # every minute
 
+[observability.logs]
+enabled = true
+
 [vars]
 # Sensitive data should be stored in the worker itself as an encrypted value... in other terms: NOT IN THIS FILE!
 # Method 1 is to use the `wrangler` command: `wrangler secret put <key>` where key is the environment variable name
